static/css/style.css
/* ... */
.highlights-box-cell {
  position: relative;
  width: 11vw;
  height: 15vw;
  min-width: 115px;
  min-height: 145px;

  box-shadow: 0px 2px 3px rgba(0,0,0,0.3);
  margin: 1vw;
  overflow: hidden;
  background-size: cover;
  background-position: center center;
  color: white;
  text-align: center;
}
.highlights-box-target a {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1;
}
.highlights-box-hover-info {
  position: absolute;
  left: 0;
  right: 0;
  opacity: 0;
  min-height: 20%;
  transition: background-color 0.5s, opacity 0.5s, border 0.5s;
  line-height: 33px;
  vertical-align: bottom;
  padding: 3px 5px;
  font-weight: 300;
}
.highlights-box-hover-info.bottom {
  height: 20%;
  bottom: 0;
}
.highlights-box-hover-info.top {
  text-align: left;
  text-overflow: ellipsis;
  top: 0;
}
.highlights-box-hover-info .price {
  font-size: 1.3em;
}
.highlights-box-hover-info i {
  margin-left: 4px;
  margin-right: 4px;
}
.highlights-box-hover-info i.material-icons {
  font-size: 1.3em;
  position: relative;
  top: 4px;
}
.highlights-box-cell:hover .highlights-box-hover-info {
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
}

/* Showcase */
.showcase .card-book {
  width: 293px;
  min-height: 460px;
  float: left;
  margin: 0 20px 20px 0;
}
.showcase .card-open {
  position: absolute;
  right: 5px;
  top: 320px;
}
.showcase .card-close {
  position: absolute;
  right: 15px;
  top: 15px;
}
.showcase .card-book .card-title {
  line-height: 28px;
  margin-bottom: 15px;
}
.showcase .card-book .card-image {
  height: 310px;
}
.showcase .card-book .card-reveal p {
  border-bottom: 1px dashed #ddd;
}
.showcase .card-book .card-reveal p strong {
  float: right;
}
.showcase .card-book .seller-rating {
  margin-top: 2px;
}
.showcase .card-book.payment img {
  -webkit-filter: grayscale(100%);
  -moz-filter: grayscale(100%);
  -ms-filter: grayscale(100%);
  -o-filter: grayscale(100%);
  filter: grayscale(100%);
}
.showcase .card-book.payment {
  opacity: 0.4;
}
form .seller-rating-star {
  cursor: pointer;
  font-size: 1.5em;
  width: 22px;
}



/* Offer */
.offer-state {
  display: block;
  position: absolute;
  bottom: 20px;
  right: 20px;
  width: 8px;
  height: 8px;
  border-radius: 100%;
  vertical-align: middle;
  margin-right: 5px;
}
.offer-state.active {
  background: #4caf50;
  box-shadow: 0px 0px 10px rgba(76, 175, 80, 0.65);
}
.offer-state.inactive {
  background: #bdbdbd;
}


/* User */
img.user-profile {
  border: 1px solid #CCC;
  width: 200px;
  height: 200px;
  border-radius: 50%;
  padding: 7px;
  box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
}

.links {
  margin-top: 20px;
  padding-top: 20px;
  border-top: 1px solid #ccc;
}

ul.border-separated li {
  float: left;
  margin-right: 10px;
  padding-right: 10px;
  border-right: 1px solid #ccc;
}
ul.border-separated li:last-child {
  border-right: none;
}

.page-start .empty {
  color: #808080;
  font-size: 1.5em;
  font-weight: 300;
  font-style: italic;
  border-radius: 3px;
  padding: 10px;
  text-align: center;
  width: 880px;
}
.page-start .nav {
  height: 0px;
  z-index: 1; /* clickable button in FF */
}
.page-start nav.transparent {
  background-color: none;
  box-shadow: none;
}
.page-start main {
  height: 100vh;
}
.page-start .main-header {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: -1;
  height: 100vh;
  width: 100%;
  background: url(/static/img/book5.jpg) no-repeat center bottom;
  background-size: cover;
}
.page-start nav {
  margin-top: 20px;
}
.page-start nav ul li:hover {
  background-color: transparent;
}
.page-start nav ul li:active {
  background-color: transparent;
}
.page-start nav a.btn-flat {
  color: white;
  background-color: none;
  border: 1px solid white;
  border-radius: 3px;
  transition: 0.4s all;
  margin-left: 10px;
  font-size: 0.9em;
  padding: 0;
  width: 130px;
  text-align: center;
}
.page-start nav a.btn-flat:hover {
  background-color: #26A69A;
  border: 1px solid #26A69A;
  border-radius: 3px;
}

.page-start .start-arrow {
  position: absolute;
  font-size: 50px;
  bottom: 20px;
  color: #D0D0D0;
  left: 50%;
  transform: translateX(-50%);
  cursor: pointer;
  animation: rub 1.5s ease-in-out infinite;
}
.page-start .citations {
  width: 100%;
  color: white;
  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.6);
  font-family: 'Pacifico', cursive;
  font-size: 2.4em;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-20%);
}
.page-start .citations p {
  line-height: 3.5rem;
  padding: 0 2em;
}
.page-start .nav a.button-collapse {
  color: white;
}
.page-start a.brand-logo {
  color: #212121;
}
.page-start .brand-logo i {
  color: #212121;
  margin-top: 10px;
}

@keyframes rub {
  0% { transform: translateX(-50%) translateY(0); }
  50% { transform: translateX(-50%) translateY(-10px); }
  100% { transform: translate(-50%) translateY(0px); }
}

/* Book */
.seller-rating {
  margin-top: 2px;
}
.seller-rating-star {
  font-size: 1em;
  width: 12px;
  color: #FCC32A;
}
.seller-rating-count {
  font-size: 0.8em;
  top: -3px;
  margin-left: 3px;
  position: relative;
}
img.book-cover {
  border: 1px solid #CCC;
  padding: 3px;
  border-radius: 3px;
  box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
}
.form-actions {
  border-top: 1px solid #ccc;
  margin-top: 30px;
  padding-top: 20px;
}

.book-details .seller-details {
  padding: 10px 15px;
  background-color: #FBFBFB;
  border: 1px solid #ccc;
  border-radius: 2px;
}
.book-details .seller-details p:first-child {
  margin-top: 0;
}
.book-details .seller-details p:last-child {
  margin-bottom: 0;
}


/* Notifications */
.notifications li {
  position: relative;
}
.notifications li .date {
  font-size: 0.8em;
  color: gray;
  margin-right: 20px;
}
.notifications li .subject {
  font-weight: normal;
}
.notifications li.new .subject {
  font-weight: bold;
}
.notifications li .badge {
  text-shadow: 0px 0px 5px rgba(254, 168, 43, 0.42);
  visibility: hidden;
}
/* ... */

